Fix dark mode compatibility (temp)

--- a/index/index_2.css
+++ b/index/index_2.css
@@ -49,6 +49,25 @@ h1 {
     }
 }
 
+body {
+    background-color: #fff;
+}
+h1 {
+    color: #000;
+}
+#logo-main {    
+    background-color: #fff;
+}
+.lines {
+    background-color: #e1e3e5;
+}
+h1.codename {
+    color: #e1e3e5;
+}
+#logo-animated-container:hover ~ h1 {
+    color: #3e3e3e;
+}
+
 @media (prefers-color-scheme: dark) {
     body {
         background-color: #000;
